ansible/manifests/nextcloud/nextcloud.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: nextcloud
  name: nextcloud
  namespace: nextcloud
spec:
  replicas: 1
  serviceName: nextcloud
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      securityContext:
        fsGroup: 33
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: nextcloud
          image: ghcr.io/isec-tut/containers/nextcloud@sha256:9431891fb0a92cfbdfe8afd3c902319804da526b3ad3930423e7f1afe8c74b22
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: app
              mountPath: /var/www/html
            - name: data
              mountPath: /mnt/nextcloud
            - name: nextcloud-secrets
              mountPath: /secrets
            - name: nextcloud-conf
              mountPath: /usr/local/etc/php-fpm.d/zz-docker.conf
              subPath: zz-docker.conf
              readOnly: true
            - name: nextcloud-conf
              mountPath: /usr/local/etc/php/conf.d/nextcloud.ini
              subPath: nextcloud.ini
              readOnly: true
            - name: nextcloud-hooks
              mountPath: /docker-entrypoint-hooks.d/before-starting/config.sh
              subPath: config.sh
              readOnly: true
          resources:
            requests:
              cpu: 300m
              memory: 200Mi
            limits:
              cpu: 1000m
              memory: 2000Mi
        - name: nginx
          image: nginx:1.31.6
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: nginx-nextcloud
          volumeMounts:
            - name: app
              mountPath: /var/www/html
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/nextcloud.conf
              subPath: nextcloud.conf
              readOnly: true
          resources:
            requests:
              cpu: 100m
              memory: 1000Mi
            limits:
              cpu: 500m
              memory: 2000Mi
      volumes:
        - name: nextcloud-secrets
          projected:
            sources:
              - secret:
                  name: nextcloud-secrets
              - secret:
                  name: fqdn-secrets
        - name: nextcloud-conf
          configMap:
            name: nextcloud-conf
        - name: nextcloud-hooks
          configMap:
            defaultMode: 504
            name: nextcloud-hooks
        - name: nginx-conf
          configMap:
            name: nginx-conf
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Delete
  volumeClaimTemplates:
    - metadata:
        name: app
      spec:
        accessModes:
          - ReadWriteOncePod
        storageClassName: iscsi-ssd-storage
        resources:
          requests:
            storage: 30Gi
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOncePod
        storageClassName: iscsi-ssd-storage
        resources:
          requests:
            storage: 100Gi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: nextcloud
  name: nextcloud
  namespace: nextcloud
spec:
  ports:
    - name: nginx-nextcloud
      port: 80
      targetPort: nginx-nextcloud
  selector:
    app: nextcloud
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nextcloud
  namespace: nextcloud
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - files.isec-lab.org
      secretName: nextcloud-cert
  rules:
    - host: files.isec-lab.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  name: nginx-nextcloud
